--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
   <div class="container">
     <div class="" style="display: flex;justify-content: center;margin-top:10px;">
       <input style="flex:1;" type="text" id="ai-value" required="required">
-      <button type="button" class="btn btn-primary" onClick="set()">Add</button>
+      <button type="button" class="btn btn-primary" onClick="saveTask()">Add</button>
     </div>
     <div class="show-list" style="margin-top:10px;">
       <ul class="list-group" id="ai-list">
